# FairVAE

./: README.md  pyproject.toml  setiup.py
fair_vae/: configs.py  datamodule.py  fairvae.py  losses.py  modules.py  trainer.py  util.py  vae.py
fair_vae/models/: fairvae.py  interface.py  modules.py  vae.py
tests/: trainer_test.py  tsne_test.py
