[tool.poetry]
name = "fairvae"
version = "0.1.0"
description = "Fair VAE for decoupling protected attributes from non protected attributes"
authors = ["PhilippeRacicot <10731763+Vaunorage@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
torch = "^1.11.0"
pytorch-lightning = "^1.6.0"
pydantic = "^1.9.0"
torchmetrics = "^0.7.3"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
rdt = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
